--- a/nginx.dev.docker.conf
+++ b/nginx.dev.docker.conf
@@ -38,6 +38,14 @@ http {
                        proxy_set_header Host $host;
                        proxy_cache_bypass $http_upgrade;
                }
+               location /codewatch/ {
+                       proxy_pass http://host.docker.internal:3005/;
+                       proxy_http_version 1.1;
+                       proxy_set_header Upgrade $http_upgrade;
+                       proxy_set_header Connection 'upgrade';
+                       proxy_set_header Host $host;
+                       proxy_cache_bypass $http_upgrade;
+               }
        }
    include       /etc/nginx/mime.types;
    default_type  application/octet-stream;
