chore(common-ui): prepared project for development docker environment with nginx and codewatch

--- a/config.docker.nginx.json
+++ b/config.docker.nginx.json
@@ -6,6 +6,11 @@
   "db": {
     "moduleHost": "http://localhost/auth"
   },
-  "microservices": {},
+  "microservices": {
+    "codewatch": {
+      "moduleHost": "http://localhost/codewatch",
+      "type": "Security"
+    }
+  },
   "v": "0.1"
 }
